Created header html and markup.

--- a/index.html
+++ b/index.html
@@ -8,5 +8,44 @@
   </head>
   <body>
 
+    <!-- Header Section -->
+    <header>
+        <div class="logo">
+          <img src="./resources/images/ic-logo.svg" alt="logo">
+          <span><strong>COLMAR</strong>ACADEMY</span>
+        </div>
+        <nav>
+          <span><a href="#">On Campus</a></span>
+          <span><a href="#">Online</a></span>
+          <span><a href="#">For companies</a></span>
+          <span><a href="#">Sign in</a></span>
+        </nav>
+
+        <!-- Phone Container -->
+        <div class="phone-container">
+          <div>
+            <img src="./resources/images/ic-logo.svg" alt="logo">
+          </div>
+          <div>
+            <a href="#">
+            <img src="./resources/images/ic-on-campus.svg" alt="campus logo">
+            </a>
+          </div>
+          <div>
+            <a href="#">
+            <img src="./resources/images/ic-online.svg" alt="online logo">
+            </a>
+          </div>
+          <div>
+            <a href="#">
+            <img src="./resources/images/ic-login.svg" alt="login logo">
+            </a>
+          </div>
+        </div>
+   </header>
+
+   <!-- Main Section -->
+
+
   </body>
 </html>
