--- a/index.html
+++ b/index.html
@@ -45,6 +45,16 @@
    </header>
 
    <!-- Main Section -->
+      <div class="banner">
+        <img src="./resources/images/banner.jpg" alt="studying on a table">
+        <div class="text">
+          <h1>Learn something new everyday</h1>
+          <h2>Lorem ipsum dolor sit amet, consectetuer adipiscing elit.</h2>
+          <a href="#">
+            <h3>Start here</h3>
+          </a> 
+        </div>
+      </div>
 
 
   </body>
