Added main supporting section and markup.

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
           <span><a href="#">Sign in</a></span>
         </nav>
 
-        <!-- Phone Container -->
+        <!-- Header Phone Container -->
         <div class="phone-container">
           <div>
             <img src="./resources/images/ic-logo.svg" alt="logo">
@@ -44,17 +44,61 @@
         </div>
    </header>
 
-   <!-- Main Section -->
-      <div class="banner">
-        <img src="./resources/images/banner.jpg" alt="studying on a table">
-        <div class="text">
-          <h1>Learn something new everyday</h1>
-          <h2>Lorem ipsum dolor sit amet, consectetuer adipiscing elit.</h2>
-          <a href="#">
-            <h3>Start here</h3>
-          </a> 
+   <!-- Banner Section -->
+     <div class="banner">
+       <img src="./resources/images/banner.jpg" alt="studying on a table">
+       <div class="text">
+         <h1>Learn something new everyday</h1>
+         <h2>Lorem ipsum dolor sit amet, consectetuer adipiscing elit.</h2>
+         <a href="#">
+           <h3>Start here</h3>
+         </a>
+       </div>
+     </div>
+
+  <!-- Main Section -->
+    <div class="main">
+      <div class="main-box">
+        <img src="./resources/images/information-main.jpg" alt="man reading a book">
+        <div class="main-text">
+          <h1>It doesn't hurt to keep practicing</h1>
+          <p>"Curabitur vitae libero in ipsum porttitor consequat. Aliquam et
+              commodo lectus, nec consequate neque. Sed non accumsan urna. Phasellus
+              sed consequat ex. Etiam eget magna laoreet, efficitur dolor consequat,
+              tristique ligula."</p>
+          <h5>Emanuel, Sr. Srategist at <a href="#">Hiring.com</a></h5>
         </div>
       </div>
+
+      <!-- Main Supporting Section -->
+      <div class="main-supporting">
+        <div class="supporting">
+          <img src="./resources/images/information-orientation.jpg" alt="people walking">
+          <div class="supporting-text">
+            <h2>Orientation date</h2>
+            <h5>Tue 10/11 & Wed 10/12: 8am-3pm</h5>
+            <a href="#">Read more</a>
+          </div>
+        </div>
+        <div class="supporting">
+          <img src="./resources/images/information-campus.jpg" alt="people studying">
+          <div class="supporting-text">
+            <h2>Our Campus</h2>
+            <h5>Find which campus is close by you</h5>
+            <a href="#">Read more</a>
+          </div>
+        </div>
+        <div class="supporting">
+          <img src="./resources/images/information-guest-lecture.jpg" alt="Oliver Sack">
+          <div class="supporting-text">
+            <h2>Our guest lecture</h2>
+            <h5>Join a keynote with Oliver Sack about music in medical treatment</h5>
+            <a href="#">Read more</a>
+          </div>
+        </div>
+      </div>
+    </div>
+
 
 
   </body>
