--- a/index.html
+++ b/index.html
@@ -99,6 +99,81 @@
       </div>
     </div>
 
+    <!-- Learning Section -->
+    <div class="learning-container">
+      <h1>Start learning</h1>
+      <div class="courses">
+        <div class="course">
+
+          <div class="course-img">
+            <img src="./resources/images/course-software.jpg" alt="two computers">
+          </div>
+          <div class="course-txt">
+            <h2>Software engineering</h2>
+            <a href="#"><h4>Courses</h4></a>
+            <p>Web Development, Mobile Development, iOT, APIs</p>
+          </div>
+        </div>
+
+        <div class="course">
+          <div class="course-img">
+            <img src="./resources/images/course-computer-art.jpg" alt="phone">
+          </div>
+          <div class="course-txt">
+            <h2>Computer art</h2>
+            <a href="#"><h4>Courses</h4></a>
+            <p>Imaging & Design, Web Design, Motion Graphics & Visual Effects,
+            Computer Animation</p>
+          </div>
+        </div>
+        <div class="course">
+          <div class="course-img">
+            <img src="./resources/images/course-design.jpg" alt="camera">
+          </div>
+          <div class="course-txt">
+            <h2>Design</h2>
+            <a href="#"><h4>Courses</h4></a>
+            <p>User Experience Design, User Research, Visual Design</p>
+          </div>
+        </div>
+        <div class="course">
+          <div class="course-img">
+            <img src="./resources/images/course-data.jpg" alt="computer">
+          </div>
+          <div class="course-txt">
+            <h2>Data</h2>
+            <a href="#"><h4>Courses</h4></a>
+            <p>Data Science, Big Data, SQL, Data Visualization</p>
+          </div>
+        </div>
+        <div class="course">
+          <div class="course-img">
+            <img src="./resources/images/course-business.jpg" alt="chess board">
+          </div>
+          <div class="course-txt">
+            <h2>Business</h2>
+            <a href="#"><h4>Courses</h4></a>
+            <p>Product Development, Business Development, Startup</p>
+          </div>
+        </div>
+        <div class="course">
+          <div class="course-img">
+            <img src="./resources/images/course-marketing.jpg" alt="smart watch">
+          </div>
+          <div class="course-txt">
+            <h2>Marketing</h2>
+            <a href="#"><h4>Courses</h4></a>
+            <p>Analytics, Content Marketing, Mobile Marketing</p>
+          </div>
+        </div>
+      </div>
+
+
+
+
+    </div>
+
+
 
 
   </body>
