Added thesis and footer section and favicon.

--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
+    <link rel="icon" href="/favicon.ico" type="image/x-icon">
     <meta charset="utf-8">
     <link href="./resources/css/reset.css" type="text/css" rel="stylesheet">
     <link href="./resources/css/style.css" type="text/css" rel="stylesheet">
@@ -41,8 +43,8 @@
             <img src="./resources/images/ic-login.svg" alt="login logo">
             </a>
           </div>
-        </div>
-   </header>
+        </div><!-- End Header Phone Container -->
+   </header><!-- End Header Section -->
 
    <!-- Banner Section -->
      <div class="banner">
@@ -54,10 +56,11 @@
            <h3>Start here</h3>
          </a>
        </div>
-     </div>
+     </div><!-- End Banner Section -->
 
   <!-- Main Section -->
     <div class="main">
+      <!-- Main Box Container -->
       <div class="main-box">
         <img src="./resources/images/information-main.jpg" alt="man reading a book">
         <div class="main-text">
@@ -68,10 +71,11 @@
               tristique ligula."</p>
           <h5>Emanuel, Sr. Srategist at <a href="#">Hiring.com</a></h5>
         </div>
-      </div>
+      </div><!-- End Main Box Container -->
 
       <!-- Main Supporting Section -->
       <div class="main-supporting">
+        <!-- Supporting Container -->
         <div class="supporting">
           <img src="./resources/images/information-orientation.jpg" alt="people walking">
           <div class="supporting-text">
@@ -80,6 +84,7 @@
             <a href="#">Read more</a>
           </div>
         </div>
+        <!-- Supporting Container -->
         <div class="supporting">
           <img src="./resources/images/information-campus.jpg" alt="people studying">
           <div class="supporting-text">
@@ -88,6 +93,7 @@
             <a href="#">Read more</a>
           </div>
         </div>
+        <!-- Supporting Container -->
         <div class="supporting">
           <img src="./resources/images/information-guest-lecture.jpg" alt="Oliver Sack">
           <div class="supporting-text">
@@ -96,15 +102,16 @@
             <a href="#">Read more</a>
           </div>
         </div>
-      </div>
-    </div>
+      </div><!-- End Main Supporting Section -->
+    </div><!-- End Main Section -->
 
     <!-- Learning Section -->
     <div class="learning-container">
       <h1>Start learning</h1>
+      <!-- Courses Section -->
       <div class="courses">
+        <!-- Course Container -->
         <div class="course">
-
           <div class="course-img">
             <img src="./resources/images/course-software.jpg" alt="two computers">
           </div>
@@ -114,7 +121,7 @@
             <p>Web Development, Mobile Development, iOT, APIs</p>
           </div>
         </div>
-
+        <!-- Course Container -->
         <div class="course">
           <div class="course-img">
             <img src="./resources/images/course-computer-art.jpg" alt="phone">
@@ -126,6 +133,7 @@
             Computer Animation</p>
           </div>
         </div>
+        <!-- Course Container -->
         <div class="course">
           <div class="course-img">
             <img src="./resources/images/course-design.jpg" alt="camera">
@@ -136,6 +144,7 @@
             <p>User Experience Design, User Research, Visual Design</p>
           </div>
         </div>
+        <!-- Course Container -->
         <div class="course">
           <div class="course-img">
             <img src="./resources/images/course-data.jpg" alt="computer">
@@ -146,6 +155,7 @@
             <p>Data Science, Big Data, SQL, Data Visualization</p>
           </div>
         </div>
+        <!-- Course Container -->
         <div class="course">
           <div class="course-img">
             <img src="./resources/images/course-business.jpg" alt="chess board">
@@ -156,6 +166,7 @@
             <p>Product Development, Business Development, Startup</p>
           </div>
         </div>
+        <!-- Course Container -->
         <div class="course">
           <div class="course-img">
             <img src="./resources/images/course-marketing.jpg" alt="smart watch">
@@ -166,15 +177,55 @@
             <p>Analytics, Content Marketing, Mobile Marketing</p>
           </div>
         </div>
+      </div><!-- End Courses Section -->
+    </div><!-- End Learning Section -->
+
+    <!-- Thesis Section -->
+    <div class="thesis-section">ss
+      <h1>Thesis exibit</h1>
+      <div class="thesis">
+
+        <!-- Thesis Video Section -->
+        <div class="thesis-vid">
+          <video src="./resources/videos/thesis.mp4" auto autoplay loop controls>
+          </video>
+          <div class="thesis-txt">
+            <h1>Reimagine urban</h1>
+            <p>"Curabitur vitae libero in ipsum porttitor consequat. Aliquam et
+                commodo lectus, nec consequate neque. Sed non accumsan urna. Phasellus
+                sed consequat ex. Etiam eget magna laoreet, efficitur dolor consequat,
+                tristique ligula."</p>
+          </div>
+        </div><!-- End Thesis Video Section -->
+
+        <!-- Thesis Supporting Section -->
+        <div class="main-supporting">
+          <div class="supporting">
+            <img src="./resources/images/thesis-fisma.jpg" alt="people walking">
+            <div class="supporting-text">
+              <h2>Fisma: Design and Prototype</h2>
+              <h5><a href="#">Designer showcase of new prototype product</a></h5>
+            </div>
+          </div>
+
+          <div class="supporting">
+            <img src="./resources/images/thesis-now-and-then.jpg" alt="people studying">
+            <div class="supporting-text">
+              <h2>Now and then</h2>
+              <h5><a href="#">Research and study about New York</a></h5>
+            </div>
+          </div>
+        </div><!-- End Thesis Supporting Section -->
       </div>
+    </div> <!-- End Thesis Section -->
 
-
-
-
-    </div>
-
-
-
-
+    <!-- Footer Secton -->
+    <footer>
+      <div class="content">
+        <span class="copyright">&copy 2016 Colmar Academy. All rights reserved </span>
+        <span class="terms"><a href="#">Terms</a></span>
+        <span class="privacy"><a href="#"> Privacy</a></span>
+      </div>
+    </footer><!-- End Footer Secton -->
   </body>
 </html>
