Small updates to markup.

--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
-    <link rel="icon" href="/favicon.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="./favicon.ico" type="image/x-icon">
+    <link rel="icon" href="./favicon.ico" type="image/x-icon">
     <meta charset="utf-8">
     <link href="./resources/css/reset.css" type="text/css" rel="stylesheet">
     <link href="./resources/css/style.css" type="text/css" rel="stylesheet">
@@ -58,9 +58,9 @@
        </div>
      </div><!-- End Banner Section -->
 
-  <!-- Main Section -->
+<!-- Main Section -->
     <div class="main">
-      <!-- Main Box Container -->
+  <!-- Main Box Container -->
       <div class="main-box">
         <img src="./resources/images/information-main.jpg" alt="man reading a book">
         <div class="main-text">
@@ -73,14 +73,14 @@
         </div>
       </div><!-- End Main Box Container -->
 
-      <!-- Main Supporting Section -->
+  <!-- Main Supporting Section -->
       <div class="main-supporting">
         <!-- Supporting Container -->
         <div class="supporting">
           <img src="./resources/images/information-orientation.jpg" alt="people walking">
           <div class="supporting-text">
             <h2>Orientation date</h2>
-            <h5>Tue 10/11 & Wed 10/12: 8am-3pm</h5>
+            <h5>Tue 10/11 &amp Wed 10/12: 8am-3pm</h5>
             <a href="#">Read more</a>
           </div>
         </div>
@@ -105,7 +105,7 @@
       </div><!-- End Main Supporting Section -->
     </div><!-- End Main Section -->
 
-    <!-- Learning Section -->
+<!-- Learning Section -->
     <div class="learning-container">
       <h1>Start learning</h1>
       <!-- Courses Section -->
@@ -129,7 +129,7 @@
           <div class="course-txt">
             <h2>Computer art</h2>
             <a href="#"><h4>Courses</h4></a>
-            <p>Imaging & Design, Web Design, Motion Graphics & Visual Effects,
+            <p>Imaging &amp Design, Web Design, Motion Graphics &amp Visual Effects,
             Computer Animation</p>
           </div>
         </div>
@@ -180,8 +180,8 @@
       </div><!-- End Courses Section -->
     </div><!-- End Learning Section -->
 
-    <!-- Thesis Section -->
-    <div class="thesis-section">ss
+<!-- Thesis Section -->
+    <div class="thesis-section">
       <h1>Thesis exibit</h1>
       <div class="thesis">
 
@@ -198,7 +198,7 @@
           </div>
         </div><!-- End Thesis Video Section -->
 
-        <!-- Thesis Supporting Section -->
+    <!-- Thesis Supporting Section -->
         <div class="main-supporting">
           <div class="supporting">
             <img src="./resources/images/thesis-fisma.jpg" alt="people walking">
@@ -219,7 +219,7 @@
       </div>
     </div> <!-- End Thesis Section -->
 
-    <!-- Footer Secton -->
+<!-- Footer Secton -->
     <footer>
       <div class="content">
         <span class="copyright">&copy 2016 Colmar Academy. All rights reserved </span>
