--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <!-- Header Section -->
     <header>
         <div class="logo">
-          <img src="./resources/images/ic-logo.svg" alt="logo">
+          <img src="./resources/images/ic-logo.svg" alt="company logo">
           <span><strong>COLMAR</strong>ACADEMY</span>
         </div>
         <nav>
@@ -26,21 +26,21 @@
         <!-- Header Phone Container -->
         <div class="phone-container">
           <div>
-            <img src="./resources/images/ic-logo.svg" alt="logo">
+            <img src="./resources/images/ic-logo.svg" alt="company logo">
           </div>
           <div>
             <a href="#">
-            <img src="./resources/images/ic-on-campus.svg" alt="campus logo">
+            <img src="./resources/images/ic-on-campus.svg" alt="campus icon">
             </a>
           </div>
           <div>
             <a href="#">
-            <img src="./resources/images/ic-online.svg" alt="online logo">
+            <img src="./resources/images/ic-online.svg" alt="online icon">
             </a>
           </div>
           <div>
             <a href="#">
-            <img src="./resources/images/ic-login.svg" alt="login logo">
+            <img src="./resources/images/ic-login.svg" alt="login icon">
             </a>
           </div>
         </div><!-- End Header Phone Container -->
@@ -48,7 +48,7 @@
 
    <!-- Banner Section -->
      <div class="banner">
-       <img src="./resources/images/banner.jpg" alt="studying on a table">
+       <img src="./resources/images/banner.jpg" alt="people studying on a table">
        <div class="text">
          <h1>Learn something new everyday</h1>
          <h2>Lorem ipsum dolor sit amet, consectetuer adipiscing elit.</h2>
@@ -60,42 +60,55 @@
 
 <!-- Main Section -->
     <div class="main">
+
   <!-- Main Box Container -->
       <div class="main-box">
         <img src="./resources/images/information-main.jpg" alt="man reading a book">
         <div class="main-text">
           <h1>It doesn't hurt to keep practicing</h1>
-          <p>"Curabitur vitae libero in ipsum porttitor consequat. Aliquam et
+          <blockquote>"Curabitur vitae libero in ipsum porttitor consequat. Aliquam et
               commodo lectus, nec consequate neque. Sed non accumsan urna. Phasellus
               sed consequat ex. Etiam eget magna laoreet, efficitur dolor consequat,
-              tristique ligula."</p>
+              tristique ligula."</blockquote>
           <h5>Emanuel, Sr. Srategist at <a href="#">Hiring.com</a></h5>
         </div>
       </div><!-- End Main Box Container -->
 
   <!-- Main Supporting Section -->
       <div class="main-supporting">
+
         <!-- Supporting Container -->
         <div class="supporting">
-          <img src="./resources/images/information-orientation.jpg" alt="people walking">
+          <img src="./resources/images/information-orientation.jpg"
+          class="supporting-img" alt="people walking">
+          <img src="./resources/images/information-orientation-mobile.jpg"
+          class="supporting-mobile" alt="people walking">
           <div class="supporting-text">
             <h2>Orientation date</h2>
             <h5>Tue 10/11 &amp Wed 10/12: 8am-3pm</h5>
             <a href="#">Read more</a>
           </div>
         </div>
+
         <!-- Supporting Container -->
         <div class="supporting">
-          <img src="./resources/images/information-campus.jpg" alt="people studying">
+          <img src="./resources/images/information-campus.jpg"
+          class="supporting-img" alt="people studying">
+          <img src="./resources/images/information-campus-mobile.jpg"
+          class="supporting-mobile" alt="people studying">
           <div class="supporting-text">
             <h2>Our Campus</h2>
             <h5>Find which campus is close by you</h5>
             <a href="#">Read more</a>
           </div>
         </div>
+
         <!-- Supporting Container -->
         <div class="supporting">
-          <img src="./resources/images/information-guest-lecture.jpg" alt="Oliver Sack">
+          <img src="./resources/images/information-guest-lecture.jpg"
+          class="supporting-img" alt="Oliver Sack">
+          <img src="./resources/images/information-guest-lecture-mobile.jpg"
+          class="supporting-mobile" alt="Oliver Sack">
           <div class="supporting-text">
             <h2>Our guest lecture</h2>
             <h5>Join a keynote with Oliver Sack about music in medical treatment</h5>
@@ -108,8 +121,10 @@
 <!-- Learning Section -->
     <div class="learning-container">
       <h1>Start learning</h1>
+
       <!-- Courses Section -->
       <div class="courses">
+
         <!-- Course Container -->
         <div class="course">
           <div class="course-img">
@@ -121,6 +136,7 @@
             <p>Web Development, Mobile Development, iOT, APIs</p>
           </div>
         </div>
+
         <!-- Course Container -->
         <div class="course">
           <div class="course-img">
@@ -133,6 +149,7 @@
             Computer Animation</p>
           </div>
         </div>
+
         <!-- Course Container -->
         <div class="course">
           <div class="course-img">
@@ -144,6 +161,7 @@
             <p>User Experience Design, User Research, Visual Design</p>
           </div>
         </div>
+
         <!-- Course Container -->
         <div class="course">
           <div class="course-img">
@@ -155,6 +173,7 @@
             <p>Data Science, Big Data, SQL, Data Visualization</p>
           </div>
         </div>
+
         <!-- Course Container -->
         <div class="course">
           <div class="course-img">
@@ -166,6 +185,7 @@
             <p>Product Development, Business Development, Startup</p>
           </div>
         </div>
+
         <!-- Course Container -->
         <div class="course">
           <div class="course-img">
@@ -190,11 +210,11 @@
           <video src="./resources/videos/thesis.mp4" auto autoplay loop controls>
           </video>
           <div class="thesis-txt">
-            <h1>Reimagine urban</h1>
-            <p>"Curabitur vitae libero in ipsum porttitor consequat. Aliquam et
+            <h2>Reimagine urban</h2>
+            <blockquote>"Curabitur vitae libero in ipsum porttitor consequat. Aliquam et
                 commodo lectus, nec consequate neque. Sed non accumsan urna. Phasellus
                 sed consequat ex. Etiam eget magna laoreet, efficitur dolor consequat,
-                tristique ligula."</p>
+                tristique ligula."</blockquote>
           </div>
         </div><!-- End Thesis Video Section -->
 
